force-app/main/default/objects/Activity/fields/Assigned_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Coordinator__c</fullName>
    <description>PGP-0019 - Stores Assigned Users full name to select and assigned to task.</description>
    <label>Assigned Coordinator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow User1</fullName>
            </value>
            <value>
                <fullName>Flow User2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>