force-app/main/default/objects/Activity/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>PGP-0026 - Formula field to display Name in Hyperlink format</description>
    <formula>HYPERLINK(&quot;/&quot;+  WhoId  ,  WhoName__c ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>