force-app/main/default/objects/Activity/fields/Display_Subject__c.field-meta.xml
<CustomField>
    <fullName>Display_Subject__c</fullName>
    <description>PGP-0026 - Subject field with Hyperlink</description>
    <formula>HYPERLINK(&quot;/&quot;+ Id ,  Subject  , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Subject</label>
    <type>Text</type>
</CustomField>