force-app/main/default/objects/Activity/fields/WhoName__c.field-meta.xml
<CustomField>
    <fullName>WhoName__c</fullName>
    <description>PGP-0026 - Stores who Id name to display in the Datatable for bulk update</description>
    <label>WhoName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>